Update age input placeholder in forms.html for clarity

--- a/forms.html
+++ b/forms.html
@@ -1,5 +1,5 @@
 <form>
     name <input type="text" placeholder="First Name" required>
-    age <input type="number" placeholder="age ">
+    age <input type="number" placeholder="ageejgdje">
     <input type="reset">       
 </form>
